--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       <section class="home" id="home">
 
         <article class="home-content">
-          <h3>Enchantée, moi c'est</h3>
+          <h3>Enchanté, moi c'est</h3>
           <h1>Matéo Perez</h1>
-          <h3 class="space">Et bienvenu dans mon portfolio</h3>
+          <h3 class="space">Bienvenu dans mon portfolio.</h3>
 
           <div class="home-sci">
             <a href="#" style="--i:5"><i class='bx bxl-linkedin' ></i></a>
@@ -54,7 +54,7 @@
       <div class="about">
       <h2>À PROPOS</h2>
       <br>
-      <p>Moi, c'est Matéo. J'ai 18 ans et je suis en BUT MMI (Métiers du Multimédia et de l'Internet) à Corté.
+      <p>Moi, c'est Matéo. J'ai 18 ans et je suis en BUT MMI (Métiers du Multimédia et de l'Internet) à l'IUT Pascal Paoli de Corte.
         <br>Je m'intéresse au domaine de l'audiovisuel, au multimédia et à la programmation.
       </p>
     </div>
@@ -110,7 +110,7 @@
     <footer id="contact">
       <p>
         Vous pouvez me contacter par
-        <a class="link" href="mailto:mateoguadalupe969@gmail.com">e-mail</a>.
+        <a class="link" href="mailto:mateoguadalupe969@gmail.com">mail</a>
       </p>
 
 
