--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           <h3 class="space">Bienvenu dans mon portfolio.</h3>
 
           <div class="home-sci">
-            <a href="#" style="--i:5" aria-label="Web Accessibility Initiative"><i class='bx bxl-linkedin' ></i></a>
-            <a href="#" style="--i:6"><i class='bx bx-envelope' ></i></a>
-            <a href="#" style="--i:7"><i class='bx bxl-instagram' ></i></a>
+            <a href="https://fr.linkedin.com/" style="--i:5"><i class='bx bxl-linkedin' ></i></a>
+            <a href="https://fr-fr.facebook.com/" style="--i:6"><i class='bx bx-envelope' ></i></a>
+            <a href="https://www.instagram.com/" style="--i:7"><i class='bx bxl-instagram' ></i></a>
           </div>
         </article>
 
