--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
         <article class="home-content">
           <h1>Enchanté, moi c'est</h1>
-          <h1>Matéo Perez</h1>
-          <h1 class="space">Bienvenu dans mon portfolio.</h1>
+          <p>Matéo Perez</p>
+          <p class="space">Bienvenu dans mon portfolio.</p>
 
           <div class="home-sci">
             <a href="https://fr.linkedin.com/" style="--i:5" aria-label="linkedin"><i class='bx bxl-linkedin' ></i></a>
