--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </article>
 
         <!--arrow-->
-      <a href="#about" class="arrow-container">
+      <a href="#about" arialabel="flèche" class="arrow-container">
         <div class="arrow"></div>
       </a>
 
